[tool.poetry]
name = "cipher_lm3598"
version = "0.1.0"
description = "cipher package"
authors = ["Lixian Mao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
Sphinx = "^4.2.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
